--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section class="home-header" style="background-color: transparent;">
 
             <img src="./HomePage/Home.png" alt="Home Page Image" class="home-image">
-            <h1>ILS Flying High <br>Magazine</h1>
+            <h1>ILS Flying High <br>Magazine 2020-21</h1>
             <div class="p-tags">
                 <p class="home-year">Academic Session: <b>2020-21</b></p>
                 <p class="credit">Image By <b class="credit-name"> Sneha Mohnani (XB)</b></p>
