--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -30,7 +30,7 @@
         <h3 class="member-name">Nirjhar Datta</h3>
     </div>
     <div class="team-member">
-        <img src="member2.jpg" alt="Team Member 3" class="member-img">
+        <img src="member2.JPG" alt="Team Member 3" class="member-img">
         <h3 class="member-name">Rahul Philip Mathew</h3>
     </div>
     <div class="team-member">
