--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -38,7 +38,7 @@
         <h3 class="member-name">Prakarsh Srivastava</h3>
     </div>
     <div class="team-member">
-        <img src="member5.jpg" alt="Team Member 5" class="member-img">
+        <img src="member5.png" alt="Team Member 5" class="member-img">
         <h3 class="member-name">Puranjay Gambhir</h3>
     </div>
 </div>
