--- a/Gallery/Magazine cover/Magazine Cover.html
+++ b/Gallery/Magazine cover/Magazine Cover.html
@@ -135,7 +135,7 @@
                 <div class="wrapper-16-by-9">
                     <div class="card-flex">
                         <img class="image" src="Grade III Winners/Anshi Chauhan.svg" alt="Anshi Chauhan">
-                        <div class="innerText"> <h4>By Anshi Chauhan (III-E)</h4><h5>First Prize </h5></div>
+                        <div class="innerText"> <h4>By Anshi Chauhan (III-E)</h4><h5>First Prize</h5></div>
                     </div>
                 </div>
                 <div class="wrapper-16-by-9">
@@ -147,13 +147,13 @@
                 <div class="wrapper-16-by-9">
                     <div class="card-flex">
                         <img class="image" src="Grade III Winners/Sidharth.svg" alt="Sidharth">
-                        <div class="innerText"> <h4>By Sidharth (III-D)</h4><h5>Second Prize Prize </h5></div>
+                        <div class="innerText"> <h4>By Sidharth (III-D)</h4><h5>Second Prize</h5></div>
                     </div>
                 </div>
                 <div class="wrapper-16-by-9">
                     <div class="card-flex">
                         <img class="image" src="Grade III Winners/Aradhya Mohanty.svg" alt="Aradhya Mohanty">
-                        <div class="innerText"> <h4>By Aradhya Mohanty (III-D)</h4><h5>Second Prize Prize </h5></div>
+                        <div class="innerText"> <h4>By Aradhya Mohanty (III-D)</h4><h5>Second Prize</h5></div>
                     </div>
                 
 
@@ -372,13 +372,13 @@
                     <div class="wrapper-16-by-9">
                         <div class="card-flex">
                             <img class="image" src="Grade XII Winners/Arathi Biju.svg" alt="Arathi Biju">
-                            <div class="innerText"> <h4>By Arathi Biju (XII-A)</h4><h5>First Place</h5> </div>
+                            <div class="innerText"> <h4>By Arathi Biju (XII-A)</h4><h5>First Prize</h5> </div>
                         </div>
                     </div>
                     <div class="wrapper-16-by-9">
                         <div class="card-flex">
                             <img class="image" src="Grade XII Winners/Dhiya Susan Eapen.svg" alt="Dhiya Susan Eapen">
-                            <div class="innerText"> <h4>By Dhiya Susan Eapen (XII-C)</h4><h5>Second Place</h5></div>
+                            <div class="innerText"> <h4>By Dhiya Susan Eapen (XII-C)</h4><h5>Second Prize</h5></div>
                         </div>
                     </div>
                     <div class="wrapper-16-by-9">
