Update From The Heartland.html

--- a/Gallery/From_The_Heartland/From The Heartland.html
+++ b/Gallery/From_The_Heartland/From The Heartland.html
@@ -74,7 +74,7 @@
                 <div class="wrapper-16-by-9">
                     <div class="card-flex">
                         <img class="image" src="./Images/SHREE ARCHIDHAA.png" alt="SHREE ARCHIDHAA">
-                        <div class="innerText">By Shree Srchidhaa</div>
+                        <div class="innerText">By Shree Archidhaa</div>
                     </div>
                 </div>
 
