--- a/Committees/C_HTML/PDC.html
+++ b/Committees/C_HTML/PDC.html
@@ -31,14 +31,10 @@
         <h3 class='a_title'>Commmittee Article</h3>
         <div class="text">
             <div class="actual_text">
-<p>Personality development helps you develop an impressive personality and makes you stand apart from the rest. Your personality is set by no one but you. It encompasses the actions you take and the decisions you make. You may not be able to change your personality type, but you can change aspects of your personality by taking determined, active steps to become a more balanced person.</p>
-
-<p>The Personality Development group was created with the initiative to help the students of ILS develop a strong personality. 2020 has been a year like no other and the coronavirus lockdown has given us ample time and space to introspect and develop our thoughts and personality. Keeping this in mind, the Personality Development Group has conducted certain activities in order to aided this process in the form of presentations, blogs and through online school<br>
-assemblies. These activities include confidence development, sharpening of communication skills and learning online etiquette.</p>
-
-<p>Nonetheless, initially, it looked doubtful on how to conduct these sessions virtually, but under the guidance and support of our committee teacher, Mrs Nivedita Jha they were all a huge success.</p>
-
-<p>It has been a whole new experience to lead a group of young changemakers and it was surely worth it!</p>
+<p>Personality development helps you develop an impressive personality and makes you stand apart from the rest. Your personality is set by no one but you. It encompasses the actions you take and the decisions you make. You may not be able to change your personality type, but you can change aspects of your personality by taking determined, active steps to become a more balanced person.</p><br>
+<p>The Personality Development group was created with the initiative to help the students of ILS develop a strong personality. 2020 has been a year like no other and the coronavirus lockdown has given us ample time and space to introspect and develop our thoughts and personality. Keeping this in mind, the Personality Development Group has conducted certain activities in order to aided this process in the form of presentations, blogs and through online school assemblies. These activities include confidence development, sharpening of communication skills and learning online etiquette.</p><br>
+<p>Nonetheless, initially, it looked doubtful on how to conduct these sessions virtually, but under the guidance and support of our committee teacher, Mrs Nivedita Jha they were all a huge success.</p><br>
+<p>It has been a whole new experience to lead a group of young changemakers and it was surely worth it!</p><br>
             </div>
         </div>
     </div>
