--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section>
             <h2 style=" margin: 0; margin-bottom: 30px;">Distinguished Board of Trustees of ILS</h2>
             <div class="pages" style="margin-top: 30px;">
-                <div class="trustee"> Articles </div>
+                <div class="trustee"> Hello </div>
                 <div class="trustee"> Committees </div>
                 <div class="trustee"> Gallery </div>
                 <div class="trustee"> Honour Roll </div>
