--- a/Committees/C_HTML/IC.html
+++ b/Committees/C_HTML/IC.html
@@ -189,10 +189,15 @@
             </div>
         </div>
         <div class="article">
-            <h3 class='a_title'> </h3>
+            <h3 class='a_title'>Service above Self</h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>We, at the Interact Club of Indian Language School, strive hard every single day to fulfil this motive. The Interact Club of ILS is a club in association with the Rotary Club of District 9110 and it has always been the Interact Club&rsquo;s objective to involve the youth in social service, educate them on various major global issues and inculcate the need and responsibility towards the same. For the year 2020-21, our teacher in charge is Mrs. Dhawan and our Interact Family consists of 83 interactors from Grades 10, 11 and 12 including our core team consisting of ten students of Grade 12.</p>
+<p><br></p>
+<p>With the COVID-19 pandemic endangering millions of lives worldwide with the ensuing lockdown, all our activities and projects had to be majorly conducted virtually or done from home. We could not conduct physical donations, bake sales, visit orphanages and many more fun activities, but this did not lessen our spirits. We attended several meetings and webinars held by the Rotary Club which varied from education on health to development of public speaking skills, focusing much on character development and encouraging Interactors to . We held a donation drive where we asked the interactors to donate essentials to their househelps, drivers, security or anyone in need, so as to show them our gratitude for their help over these difficult times. Our interactors actively participated in every event which made being apart easy too!&nbsp;</p>
+<p><br></p>
+<p>We have also built a website (<a href="http://interactclubofils.wordpress.com" style="text-decoration:none;">Interact Club Website</a>) for our club too to make the spread of awareness and information easy and more accessible and help connect each and everyone of us together in solidarity.</p>
+<p>Even though this year was extremely difficult for everyone, we strived to make the most of what we could!</p>
                 </div>
             </div>
         </div>
