Update From The Heartland.html

--- a/Gallery/From_The_Heartland/From The Heartland.html
+++ b/Gallery/From_The_Heartland/From The Heartland.html
@@ -77,6 +77,54 @@
                         <div class="innerText">By Shree Archidhaa</div>
                     </div>
                 </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/KOENA MALIK.svg" alt="KOENA MALIK">
+                        <div class="innerText">By Koena Malik</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/REJA FATHIMA.svg" alt="REJA FATHIMA">
+                        <div class="innerText">By Reja Fathima</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/SHARVARI BHATKAR.svg" alt="SHARVARI BHATKAR">
+                        <div class="innerText">By Sharvari Bhatkar</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/RAYNOR GUDIPATI.svg" alt="RAYNOR GUDIPATI">
+                        <div class="innerText">By Raynor Gudipati</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/RISHITA RATH.svg" alt="RISHITA RATH">
+                        <div class="innerText">By Rishita Rath</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/SHUBHASRI BERIA.svg" alt="SHUBHASRI BERIA">
+                        <div class="innerText">By Shubhasri Beria</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/SHUBHASRI.svg" alt="SHUBHASRI">
+                        <div class="innerText">By Shubhasri</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/YASHAS SAI.svg" alt="YASHAS SAI">
+                        <div class="innerText">By Yashas Sai</div>
+                    </div>
+                </div>
 
             </div>
         </div>
