--- a/Gallery/Magic_Fingers/Magic Fingers.html
+++ b/Gallery/Magic_Fingers/Magic Fingers.html
@@ -95,6 +95,78 @@
                         <div class="innerText">By Rudra Laxman</div>
                     </div>
                 </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/ABEERA SHIEKH.svg" alt="ABEERA SHIEKH">
+                        <div class="innerText">By Abeera Shiekh</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/ARAYAN BALI.svg" alt="ARAYAN BALI">
+                            <div class="innerText">By Arayan Bali</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/L.V.B. KANISQ.svg" alt="L.V.B. KANISQ">
+                        <div class="innerText">By L.V.B. Kanisq</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/DARSH BAGD.svg" alt="DARSH BAGD">
+                        <div class="innerText">By Darsh Bagd</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/KHUSHI SINGH.svg" alt="KHUSHI SINGH">
+                        <div class="innerText">By Khushi Singh</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/MEDHAANSH SAINI.svg" alt="MEDHAANSH SAINI">
+                        <div class="innerText">By Medhaansh Saini</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/NIVAAN.svg" alt="NIVAAN">
+                        <div class="innerText">By Nivaan</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/PRITHIKSA KUMAR.svg" alt="PRITHIKSA KUMAR">
+                        <div class="innerText">By Prithiksa Kumar</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/PRATIDNAYA.svg" alt="PRATIDNAYA">
+                        <div class="innerText">By Pratidnaya</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/RAYNOR GUDIPATI.svg" alt="RAYNOR GUDIPATI">
+                        <div class="innerText">By Raynor Gudipati</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/VISAIRAGHAV.svg" alt="VISAIRAGHAV">
+                        <div class="innerText">By Visairaghav</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/SHUBHASRI BERIA.svg" alt="SHUBHASRI BERIA">
+                        <div class="innerText">By Shubhasri Beria</div>
+                    </div>
+                </div>
 
             </div>
         </div>
