Update Trees, Bees and Birds.html

--- a/Gallery/Trees_Bees_and_Birds/Trees, Bees and Birds.html
+++ b/Gallery/Trees_Bees_and_Birds/Trees, Bees and Birds.html
@@ -83,6 +83,48 @@
                         <div class="innerText">By Archisha</div>
                     </div>
                 </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/HARSHITHA RAMESH KUMAR.svg" alt="HARSHITHA RAMESH KUMAR">
+                        <div class="innerText">By Harshitha Ramesh Kumar</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/MEHREEN SABIL.svg" alt="MEHREEN SABIL">
+                        <div class="innerText">By Mehreen Sabil</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/MISHTI TEKWANI.svg" alt="MISHTI TEKWANI">
+                        <div class="innerText">By Mishti Tekwani</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/JEEVATMEET KAUR.svg" alt="JEEVATMEET KAUR">
+                        <div class="innerText">By Jeevatmeet Kaur</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/KRISHETHA RAJEEV.svg" alt="KRISHETHA RAJEEV">
+                        <div class="innerText">By Krishetha Rajeev</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/RUDRA BUTNEY.svg" alt="RUDRA BUTNEY">
+                        <div class="innerText">By Rudra Butney</div>
+                    </div>
+                </div>
+                <div class="wrapper-16-by-9">
+                    <div class="card-flex">
+                        <img class="image" src="./Images/YASHAS SAI.svg" alt="YASHAS SAI">
+                        <div class="innerText">By Yashas Sai</div>
+                    </div>
+                </div>
 
 
 
