--- a/Honour Roll/Honour_Roll.html
+++ b/Honour Roll/Honour_Roll.html
@@ -297,7 +297,7 @@
     </style>
         <!--Navigation Menu-->
         <div class="menu-container" onclick="myFunction(this)">
-            <iframe src="../../embed3.html" frameborder="0" class="nav-container"></iframe>
+            <iframe src="../embed3.html" frameborder="0" class="nav-container"></iframe>
             <abbr title="Navigation Menu (Click)">
                     <div class="container">
                         <div class="bar1"></div>
