--- a/Laurels/Laurels.html
+++ b/Laurels/Laurels.html
@@ -994,7 +994,7 @@
     </div>
         <!--Navigation Menu-->
         <div class="menu-container" onclick="myFunction(this)">
-            <iframe src="../../embed3.html" frameborder="0" class="nav-container"></iframe>
+            <iframe src="../embed3.html" frameborder="0" class="nav-container"></iframe>
             <abbr title="Navigation Menu (Click)">
                     <div class="container">
                         <div class="bar1"></div>
