--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="page-card button " onclick="window.location.href='Laurels/Laurels.html' "><span> Laurels</span></div>
                 <div class="page-card button " onclick="window.location.href='Student_council/council.html' "><span> Student Council</span></div>
                 <div class="page-card button " onclick="window.location.href='Teachers/index.html' "><span> ILS Teaching Staff</span></div>
-                <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' "><span> Year in a glance</span></div>
+                <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' "><span> Year at a glance</span></div>
             </div>
         </section>
         <section class="high " style="height: 100vh;">
@@ -83,7 +83,7 @@
                 <div class="trustee"> Laurels </div>
                 <div class="trustee"> Student Council</div>
                 <div class="trustee"> ILS Teaching Staff</div>
-                <div class="trustee"> Year in a glance</div>
+                <div class="trustee"> Year at a glance</div>
             </div>
         </section>
 <section class="head-msgs">
