--- a/embed3.html
+++ b/embed3.html
@@ -16,7 +16,7 @@
         <div class="menu">
             <div class="headings">
 
-                <div class="nav home"><a href='HomePage/home2.html' target='_blank'>Home</a></div>
+                <div class="nav home"><a href='index.html' target='_blank'>Home</a></div>
 
 
                 <div class="nav articles"><a href='Articles/article-list.html' target='_blank'>Articles</a></div>
