--- a/index.html
+++ b/index.html
@@ -76,14 +76,24 @@
         <section>
             <h2 style=" margin: 0; margin-bottom: 30px;">Distinguished Board of Trustees of ILS</h2>
             <div class="pages" style="margin-top: 30px;">
-                <div class="trustee"> Hello </div>
-                <div class="trustee"> Committees </div>
-                <div class="trustee"> Gallery </div>
-                <div class="trustee"> Honour Roll </div>
-                <div class="trustee"> Laurels </div>
-                <div class="trustee"> Student Council</div>
-                <div class="trustee"> ILS Teaching Staff</div>
-                <div class="trustee"> Year at a glance</div>
+                <div class="trustee"> His Excellency Shri. Abhay Thakur  <div class="trustee-desc" style="font-size:15px; font-weight:300;">(High Commissioner of India & Chairman Board of Trustees)</div></div>
+                <div class="trustee"> Mr. M.L. Lalchandani <div class="trustee-desc" style="font-size:15px; font-weight:300;">Chairman Committee of the Board of Trustees </div></div>
+                <div class="trustee"> Dr. (Mrs.)Suman Kanwar <div class="trustee-desc" style="font-size:15px; font-weight:300;">Ex Principal of ILS </div> </div>
+                <div class="trustee"> Mr. V. Srivathsan </div>
+                <div class="trustee"> Mr. Rahul Savara </div>
+                <div class="trustee"> Mr. Nari Gwalani</div>
+                <div class="trustee"> Mr. A. Bharadwaj <div class="trustee-desc" style="font-size:15px; font-weight:300;">Represented by Mr. Sudharsanam Ellanti </div></div>
+                <div class="trustee"> Mrs. Poonam Dalamal</div>
+                <div class="trustee"> Mr. Siva Subramanian</div>
+                <div class="trustee"> Mr. Alok Gupta </div>
+                <div class="trustee"> Mr. Navdeep Singh Sodhi</div>
+                <div class="trustee"> Mr. Suresh Govindaram</div>
+                <div class="trustee"> Mr. Peeyush Garg</div>
+                <div class="trustee"> Mr. Madhukar Khetan</div>
+                <div class="trustee"> Chief (Mr.) Sanjay Jain<div class="trustee-desc" style="font-size:15px; font-weight:300;">(ex-officio – ICA) </div></div>
+                <div class="trustee"> Mrs. Ramneet Kaur<div class="trustee-desc" style="font-size:15px; font-weight:300;">(ex-officio – PTA) </div></div>
+                <div class="trustee"> Mrs. Sonali Gupta<div class="trustee-desc" style="font-size:15px; font-weight:300;">(Principal & Secretary Board of Trustees) </div></div>
+
             </div>
         </section>
 <section class="head-msgs">
