--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <iframe class="message-high " src="./HomePage/MESSAGE FROM HIGH COMMISSIONER TO ILS LAGOS.pdf#toolbar=0&navpanes=0&view=fit " frameborder="0 " width="100% " height="100% "></iframe>
         </section>
         <section class="principal ">
-            <img src="./HomePage/P.jpg" alt="Principal Image " class="p-img ">
+            <img src="./HomePage/Mrs Sonali Gupta.jpg" alt="Principal Image " class="p-img ">
             <div class="p-message">
                 <h2 class="p-title">Principal's Message</h2>
                 <p> This year has been a very unusual year for all the mankind globally. The COVID- 19 pandemic has transformed the way we behave, live and think. It has taught us that nothing is more important than our health, well-being and safety. I want
