--- a/Committees/C_HTML/GAC.html
+++ b/Committees/C_HTML/GAC.html
@@ -31,7 +31,8 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>Global Awareness is a capacity that incorporates the attitudes, knowledge, and skills necessary for a person to competently and perceptively navigate the challenges and opportunities of a globalized world in a way that promotes the greater good. It helps us in understanding diversity, learning about other cultures, and recognizing our place in the world, which is a key 21st-century skill.</p>
+<p>Our committee is headed by Mrs. Bindu Mathew along with the student heads Alankrit Bhardwaj &amp;amp; Mahek Sarda of grade XII. Our main objective is to update the students about the latest news and happenings around the world and increase their awareness in social and political matters of the world nurturing their ability to understand, respect, and work well with people from diverse cultures which is increasingly important for social and academic success in an interconnected world. We aim to provide reliable and relevant information to all students of the school to prevent any unnecessary panic and stress amongst them.</p>
                 </div>
             </div>
         </div>
