--- a/Committees/C_HTML/DEAR.html
+++ b/Committees/C_HTML/DEAR.html
@@ -31,7 +31,12 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>The DEAR Committee of Indian Language School has been a part of the school for many years. Every year, it is our duty to educate our fellow students on the importance of books in our lives and encourage them to read. Although the Covid-stricken year of 2020 had made things much harder than they should have, the committee, led by Mrs S. Mitra made the most out of it.</p>
+<p><br></p>
+<p>During this pandemic-forsaken year, we have not only managed to give our students motivation to read in multiple videos stating the importance and benefits of reading to all ages but have also accomplished a great feat; inviting a renowned Indian author; Mrs Anjali Kirplani to talk about the same and more. To round things off, during the end of the year, our team worked very hard to put up an online library for the students&rsquo; benefit. We hope our efforts this year have been fruitful and have helped everyone in some way or the other.</p>
+<p><br></p>
+<p><em>&ldquo;The more you read, the more things you know. The more you learn, the more places you&rsquo;ll go.&rdquo;- Dr Seuss</em></p>
+<p><br></p>
                 </div>
             </div>
         </div>
