--- a/Committees/C_HTML/SSC.html
+++ b/Committees/C_HTML/SSC.html
@@ -192,7 +192,11 @@
             <h3 class='a_title'> </h3>
             <div class="text">
                 <div class="actual_text">
-                    &nbsp;
+                    <p>We all know that Covid-19 has forced us to stay at home. By doing this we are safe but what about our physical fitness? Keeping this in mind school safety committee presents a presentation on <em>Obesity</em>.</p>
+<p>Obesity is a health condition that occurs when a person carries excess weight or body fat, which has been associated with the increased risk of many chronic diseases, such as type 2 diabetes, heart disease, and stroke. The global prevalence of overweight and obesity has been more than 1.9 billion in adults, 38 million in children under the age of five, and over 340 million in children and adolescents aged 5‐19.&nbsp;</p>
+<p>However, the COVID‐19 pandemic has brought a significant impact on human lives. &ldquo;Stay‐at‐home&rdquo; has been ordered by many governments around the world, aiming at containing the spread of COVID‐19, which, may consequently have changed activity patterns and weight status among people of all ages. Among all affected, the youth is a particularly vulnerable population to such changes, due to their newly obtained freedom to manage their lifestyles with, however, relatively insufficient capacity of coping with such unexpected changes. School or campus closures may have further aggravated the impact of lockdown measures on them by creating physical activity (PA) challenges. Millions of students are thus affected by school closures globally.</p>
+<p>With all this happening, our responsibility towards our health increases. We must do all that we can to maintain healthy eating habits and remain active so that we can control this situation. Proper nutrition and hydration are vital. Those who consume a well-balanced diet are healthier and can build a stronger immune system. A healthy diet limits the risk of chronic illnesses and infectious diseases.</p>
+<p>Incorporating the above-mentioned tips in our daily lives will help to maintain good health and also keep our weight in control. Taking small steps at an individual level will help us to curb the problem of obesity.</p>
                 </div>
             </div>
         </div>
