--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </section>
       
       <section style='background: linear-gradient(229.26deg, #FFABCF 8.18%, #C13CFF 118.75%);'>
-        <h2> Congrats to Mrs Yadav on 30 glorious years in ILS! </h2>
+        <h2>ILS Congratulates Mrs Ishita Yadav on completing 30 glorious years!</h2>
         <button onclick='window.location.href="HomePage/Yadav.html"' style= "padding: 10px; font-size: 20px; border-radius: 50px; width: 200px; margin-left: calc(50% - 100px); border: none; outline: none; cursor: pointer;" class=''yadav-read'> Read Acrticle </button>
       </section>
       
