--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="page-card button " onclick="window.location.href='Student_council/council.html' "><span> Student Council</span></div>
                 <div class="page-card button " onclick="window.location.href='Teachers/index.html' "><span> ILS Teaching Staff</span></div>
                 <div class="page-card button " onclick="window.location.href='Gallery/Timeline/Year at a glance.html' "><span> Year at a glance</span></div>
+                <div class="page-card button " onclick="window.location.href='HomePage/Editorial.html' "><span> Year at a glance</span></div>
             </div>
         </section>
         <section class="high " style="height: 100vh;">
@@ -397,7 +398,7 @@
             
             .pages {
                 display: grid;
-                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr;
                 grid-gap: 30px;
             }
             
