--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -15,6 +15,16 @@
 
 <body>
     <h1>Editorial</h1>
+    <p style="text-align: center;"><strong>Teachers&apos; Editorial</strong></p>
+<p>From The Editorial Desk &hellip;</p>
+<p>Times changed so did the glittering vision of our Principal, Mrs Sonali Gupta. Rising to the occasion with firm strides and her undaunting support, she along with Dr Mrs Manisha Jain and Mrs Ishita Yadav made the leap to a digital edition of the school magazine.</p>
+<p>It is with pride and a sense of achievement ILS announces the digitalized edition of their magazine Flying High 2020-2021. The magazine reflects the twists and turns the pandemic has made us take. With heads held high and an unmatched spirit and zeal, the ILS magazine team dedicates it to the new normal and the digitalized era.</p>
+<p>The student team comprised of brilliant minds like - Gaurav Shah, Rahul Philip Mathew, Nirjhar Datta, Puranjay Gambhir and Prakarsh Srivastava. Hats off to each one of them who put in numerous hours of coding, editing, proofreading, artwork to produce this masterpiece.</p>
+<p>The magazine committee Head Moshumi Shit supported her team by being there for them and we are always grateful to each one of them to have created history.</p>
+<p style="text-align: right;">Mrs. Gursharan Shergill, Mrs. Sudipa Mitra, Mrs. Tuhina Bhalekar and Mrs. Vandana Chaturvedi.</p>
+<p><br></p>
+<p style="text-align: center;"><strong>Students&apos; Editorial</strong></p>
+<p style="text-align: left;"><br></p>
     <p>It is with great pleasure that we bring to you the 2020-21 Flying High Magazine. Although 2020 was an unpredictable year for many of us,  it opened us up to so many opportunities. Online school brought about innovations in teaching and learning alike. It seems as though in this past year we have all become tech geniuses with an expanded skill set. We thought it best that the magazine of 2020-21 reflects our experiences from the past year. It is with this spirit that we the students, with the approval of Mrs Sonali Gupta, decided to code this year&rsquo;s edition of Flying High.</p>
 <p><br></p>
 <p>This magazine would not have been possible without our wonderful team:</p>
@@ -22,23 +32,23 @@
 
 <div class="team">
     <div class="team-member">
-        <img src="member1.jpg" alt="Team Member 1" class="member-img">
+        <img src="member1.jpg" alt="Team Member 1" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
         <h3 class="member-name">Gaurav Shah</h3>
     </div>
     <div class="team-member">
-        <img src="member2.jpeg" alt="Team Member 2" class="member-img">
+        <img src="member2.jpeg" alt="Team Member 2" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
         <h3 class="member-name">Nirjhar Datta</h3>
     </div>
     <div class="team-member">
-        <img src="member2.JPG" alt="Team Member 3" class="member-img">
+        <img src="member2.JPG" alt="Team Member 3" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
         <h3 class="member-name">Rahul Philip Mathew</h3>
     </div>
     <div class="team-member">
-        <img src="member3.jpeg" alt="Team Member 4" class="member-img">
+        <img src="member3.jpeg" alt="Team Member 4" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
         <h3 class="member-name">Prakarsh Srivastava</h3>
     </div>
     <div class="team-member">
-        <img src="member5.png" alt="Team Member 5" class="member-img">
+        <img src="member5.png" alt="Team Member 5" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
         <h3 class="member-name">Puranjay Gambhir</h3>
     </div>
 </div>
