--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1>Editorial</h1>
-    <p style="text-align: center;"><strong>Teachers&apos; Editorial</strong></p>
+    <br><p style="text-align: center;"><strong>Teachers&apos; Editorial</strong></p>
 <p>From The Editorial Desk &hellip;</p>
 <p>Times changed so did the glittering vision of our Principal, Mrs Sonali Gupta. Rising to the occasion with firm strides and her undaunting support, she along with Dr Mrs Manisha Jain and Mrs Ishita Yadav made the leap to a digital edition of the school magazine.</p>
 <p>It is with pride and a sense of achievement ILS announces the digitalized edition of their magazine Flying High 2020-2021. The magazine reflects the twists and turns the pandemic has made us take. With heads held high and an unmatched spirit and zeal, the ILS magazine team dedicates it to the new normal and the digitalized era.</p>
